--- a/Página de Cadastro/PC e Tablet/style.css
+++ b/Página de Cadastro/PC e Tablet/style.css
@@ -1,6 +1,8 @@
 body {
-    background-repeat: no-repeat;
-    background-image: url("https://images2.alphacoders.com/116/thumb-1920-1160159.png");
+    background-color: #444343;
+    background-image: url("https://images5.alphacoders.com/389/389247.png");
+    /* background-image: url("https://lh3.googleusercontent.com/05JfZ1ZdyzrRNvhJosUFdcjjJRFE7k2KhmeM2ujqeCbrcrCb1hkq7O_JdUBpQ3r9hi0YeSn4WgmKx3Ai8LHdM2SucxSzl9TRZ4fCAqETJ6WtHgE=s0"); */
+    /* background-image: url("https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png"); */
     color: #999999;
     font-family: 'Anton', sans-serif;
     font-weight: bold;
@@ -29,7 +31,7 @@ body::-webkit-scrollbar-thumb {
 
 .link:hover{
     text-decoration: underline;
-    color: blue;
+    color: #444343;
 }
 
 .text {
@@ -39,12 +41,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .divLogin{
-    width: 50%;
+    width: 55%;
     height: auto;
     background-color: white;
     position: absolute;
     top: 5%;
-    left: 25%;
+    left: 22%;
     border: 2px solid none;
     border-radius: 10px;
     display: inline-flex;
@@ -54,7 +56,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     padding: 0px;
     top: 0px;
-    border: 1px solid none;
+    border: 0px solid none;
 }
 
 .subTituloLogin{
@@ -63,7 +65,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .loginMenu{
-    width: 93.4%;
+    width: 94%;
     height: auto;
     background-color: #F2F2F2;
     padding: 20px 15px 20px 30px;
@@ -77,7 +79,6 @@ body::-webkit-scrollbar-thumb {
 .loginMenu a{
     position: relative;
     top: -5%;
-    font-size: 15px;
 }
 
 .textoInput{
@@ -135,9 +136,9 @@ body::-webkit-scrollbar-thumb {
     box-shadow: none;
     margin-left: 25px;
     transition: all 0.5s;
-}
+} */
 
-.imagemLogin:hover {
+/* .imagemLogin:hover {
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.664);
 } */
 
@@ -169,7 +170,7 @@ body::-webkit-scrollbar-thumb {
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 74.5%;
+    top: 100%;
     z-index: 1;
     background-color: #1f1f1f;
     color: white;
@@ -223,6 +224,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width: 768px) {
+
     .divLogin{
         width: 80%;
         height: auto;
@@ -253,5 +255,27 @@ body::-webkit-scrollbar-thumb {
         box-shadow: none;
         margin-left: 25px;
         transition: all 0.5s;
+    }
+
+    .lateralEsquerdaPreta {
+        position: fixed;
+        top:0%;
+        left: 0px;
+        z-index: 1;
+        background-color: #00000015;
+        width: 0%;
+        height: 100%;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.63)
+    }
+    
+    .lateralDireitaPreta {
+        position: fixed;
+        top:0%;
+        right: 0px;
+        z-index: 1;
+        background-color: #00000015;
+        width: 0%;
+        height: 100%;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.63)
     }
 }
