--- a/Página de Batalha/Telefone/style.css
+++ b/Página de Batalha/Telefone/style.css
@@ -129,11 +129,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 #divSobrePokemon {
-    width: 68%;
+    width: 90%;
     height: auto;
     position: relative;
     top: 100px;
-    left: 16%;
+    margin: auto;
     border: 1px none black;
 }
 
@@ -223,7 +223,7 @@ body::-webkit-scrollbar-thumb {
 .rodape {
     width: 100%;
     height: 250px;
-    position: absolute;
+    position: relative;
     left: 0%;
     right: 0%;
     bottom: 0%;
